[project]
name = "json4humans"
version = "0.1.0"
description = "Python tools for JSONC and JSON5 (aka. JSON for humans)"
authors = [
    {name = "Axel H.", email = "noirbizarre@gmail.com"},
]
dependencies = [
    "lark[regex]>=1.1.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/noirbizarre/json4humans"
Documentation = "https://json4humans.rtfd.io"
Repository = "https://github.com/noirbizarre/json4humans"
Issues = "https://github.com/noirbizarre/json4humans/issues"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.2",
    "pytest-sugar>=0.9.5",
    "pytest-cov>=3.0.0",
    "pytest-benchmark[histogram]>=3.4.1",
]
lint = [
    "black>=22.6.0",
    "isort>=5.10.1",
    "mypy>=0.971",
    "absolufy-imports>=0.3.1",
    "flakeheaven>=3.0.0",
]
tox = [
    "tox",
    "tox-pdm>=0.5",
]
doc = [
    "mkdocs>=1.3.1",
    "mkdocs-material>=8.3.9",
    "mkdocstrings[python]>=0.19.0",
]


[tool.pdm.scripts]
test.help = "Run the test suite"
test.cmd = "pytest"

tox.help = "Run the test suite against all supported Python version"
tox.cmd = "tox"

lint.help = "Lint all tracked files using pre-commit"
lint.cmd = "pre-commit run --all-files"

cover.help = "Run the test suite with coverage"
cover.composite = [
  """
  test
    --cov-report=term
    --cov=json4humans
    --cov-report=html:reports/coverage
    --cov-report=xml:reports/coverage.xml
    --junitxml=reports/tests.xml
  """
]

pre_bench = "mkdir -p reports/benchmarks"
bench.help = "Run the benchmarks suite"
bench.cmd = """
pytest --verbose
  -o "python_files=bench*.py"
  -o "python_functions=bench_*"
  --benchmark-group-by=fullname
  --benchmark-autosave
  --benchmark-disable-gc
  --benchmark-histogram=reports/benchmarks/histogram
  --benchmark-json=reports/benchmarks/data.json
  --benchmark-max-time=5
  --benchmark-min-time=1
  --benchmark-save-data
  --junitxml=reports/benchmarks/junit.xml
"""

doc.help = "Build the documentation"
doc.cmd = "mkdocs build"

"doc:watch".help = ""
"doc:watch".cmd = "mkdocs serve"


[tool.pdm.vscode]
linters = ["flake8"]
formatter = "black"


[tool.black]
line-length = 100
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | __pycache__
  | __pypackages__
  | build
  | dist
  | tests/fixtures
)/
'''


[tool.flakeheaven]
format = "grouped"
max_line_length = 110
exclude = [
  ".git",
  ".github",
  ".mypy_cache",
  ".pytest_cache",
  ".tox",
  ".venv",
  "__pycache__",
  "__pypackages__",
  "build",
  "dist",
  "reports",
  "site",
  "venv",
  "docs",
]
[tool.flakeheaven.plugins]
pycodestyle = ["+*", "-E203"]
pyflakes = ["+*"]
mccabe = ["+*"]


[tool.isort]
# See: https://pycqa.github.io/isort/docs/configuration/black_compatibility/
profile = "black"
multi_line_output = 3
include_trailing_comma = true
line_length = 110
atomic = true
filter_files = true
known_first_party = ["json4humans"]
known_third_party = ["lark"]


[tool.pytest.ini_options]
addopts = "-ra"
norecursedirs = ".git build dist"
testpaths = [
  "json4humans/",
  "tests/",
]
markers = [
  "jsons(*modules): Mark to be tested against multiple JSON modules/version",
  "fixturize(glob): parametrize the test with a fixture glob pattern",
  "json: Mark a function to be tested against the JSON implementation",
  "json5: Mark a function to be tested against the JSON5 implementation",
  "jsonc: Mark a function to be tested against the JSONC implementation",
]


[tool.coverage.run]
source = ["json4humans"]
branch = true
omit = [
  "tests/*",
]


[tool.mypy]
exclude = [
  "docs",
]
